[MOM-313] feat: enhance marketplace escrow order handling with improved gas estimation and validation logic
Signed-off-by: Nutria <qkrwldn2016@gmail.com>